// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VirtualizedMessageComponents > EmptyPlaceholder > should render custom EmptyStateIndicator for main message list 1`] = `
<div>
  <div
    data-listtype="message"
  >
    Custom EmptyStateIndicator
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > EmptyPlaceholder > should render custom EmptyStateIndicator for thread 1`] = `
<div>
  <div
    data-listtype="thread"
  >
    Custom EmptyStateIndicator
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > EmptyPlaceholder > should render for main message list by default 1`] = `
<div>
  <div
    class="str-chat__empty-channel"
  >
    <svg
      class="str-chat__icon str-chat__icon--message-bubble"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.44095 1.26581C10.0755 1.37256 11.6156 2.06954 12.774 3.22772C13.9324 4.38612 14.6301 5.92697 14.7368 7.56171C14.8435 9.19636 14.352 10.8144 13.354 12.1135C12.3562 13.4124 10.9198 14.3039 9.31302 14.6223C7.81949 14.9181 6.27349 14.6991 4.92435 14.008L2.89603 14.6848C2.6758 14.7582 2.43936 14.7693 2.21341 14.716C1.98745 14.6627 1.7809 14.5472 1.61673 14.383C1.45256 14.2188 1.33705 14.0123 1.28372 13.7863C1.23041 13.5604 1.24153 13.3239 1.31497 13.1037L1.99369 11.0773C1.3029 9.72839 1.08366 8.18288 1.37943 6.68963C1.69774 5.0827 2.59011 3.64659 3.88919 2.64862C5.18835 1.65065 6.80621 1.15909 8.44095 1.26581ZM8.34329 2.7619C7.07187 2.6789 5.8137 3.06192 4.80326 3.83807C3.79289 4.6142 3.09876 5.73091 2.85111 6.98065C2.60352 8.23054 2.8193 9.52825 3.45755 10.631C3.56524 10.8172 3.5874 11.0413 3.51908 11.2453L2.89701 13.1027L4.75833 12.4826L4.83548 12.4611C5.01728 12.4214 5.20891 12.4509 5.37161 12.5451C6.47427 13.1832 7.77134 13.399 9.02103 13.1515C10.2709 12.904 11.3884 12.2099 12.1646 11.1994C12.9407 10.189 13.3227 8.93076 13.2398 7.65936C13.1568 6.388 12.6143 5.19019 11.7134 4.28924C10.8125 3.38832 9.61468 2.84495 8.34329 2.7619Z"
      />
    </svg>
    <p
      class="str-chat__empty-channel-text"
      role="listitem"
    >
      Send a message to start the conversation
    </p>
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > Header > should not render custom head in Header when loading more messages, but the LoadingIndicator 1`] = `
<div>
  <div>
    Custom head
  </div>
  <div
    class="str-chat__virtual-list__loading"
  >
    <svg
      class="str-chat__icon str-chat__icon--loading str-chat__loading-indicator"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 8C13 5.23858 10.7614 3 8 3C5.23858 3 3 5.23858 3 8C3 10.7614 5.23858 13 8 13C10.7614 13 13 10.7614 13 8ZM15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8Z"
      />
      <path
        d="M14.073 7.67248C14.6219 7.73317 15.0184 8.22803 14.9578 8.77697C14.5987 12.023 12.0231 14.5986 8.77709 14.9576C8.22815 15.0183 7.73329 14.6218 7.6726 14.0729C7.61216 13.5242 8.00782 13.0303 8.55639 12.9694C10.8722 12.7133 12.7135 10.8721 12.9695 8.55627C13.0304 8.00769 13.5244 7.61204 14.073 7.67248Z"
      />
    </svg>
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > Header > should render LoadingIndicator in Header when loading more messages 1`] = `
<div>
  <div
    class="str-chat__virtual-list__loading"
  >
    <svg
      class="str-chat__icon str-chat__icon--loading str-chat__loading-indicator"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 8C13 5.23858 10.7614 3 8 3C5.23858 3 3 5.23858 3 8C3 10.7614 5.23858 13 8 13C10.7614 13 13 10.7614 13 8ZM15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8Z"
      />
      <path
        d="M14.073 7.67248C14.6219 7.73317 15.0184 8.22803 14.9578 8.77697C14.5987 12.023 12.0231 14.5986 8.77709 14.9576C8.22815 15.0183 7.73329 14.6218 7.6726 14.0729C7.61216 13.5242 8.00782 13.0303 8.55639 12.9694C10.8722 12.7133 12.7135 10.8721 12.9695 8.55627C13.0304 8.00769 13.5244 7.61204 14.073 7.67248Z"
      />
    </svg>
  </div>
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper with custom classes with group styles 1`] = `
<div>
  <div
    class="XXX"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper with custom classes without group styles 1`] = `
<div>
  <div
    class="XXX"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper without custom classes with group styles 1`] = `
<div>
  <div
    class="str-chat__virtual-list-message-wrapper str-chat__li str-chat__li--single"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;

exports[`VirtualizedMessageComponents > Item > should render wrapper without custom classes without group styles 1`] = `
<div>
  <div
    class="str-chat__virtual-list-message-wrapper str-chat__li"
    data-index="10000000"
    data-item-index="10000000"
    data-known-size="0"
  />
</div>
`;
